--- a/.github/workflows/deploy-to-azure.yml
+++ b/.github/workflows/deploy-to-azure.yml
@@ -57,6 +57,7 @@ jobs:
         with:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
           resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
+          parameters: sqlServerPassword=${{ env.SQL_PASSWORD }}
           template: ./deploy/europe.bicep
           deploymentMode: Complete
           failOnStdErr: false
