--- a/.github/workflows/deploy-to-azure.yml
+++ b/.github/workflows/deploy-to-azure.yml
@@ -32,6 +32,7 @@ jobs:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
           resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
           template: ./deploy/us.bicep
+          deploymentName: us-run-${{ github.run_id }}
           deploymentMode: Complete
           failOnStdErr: false
 
@@ -59,5 +60,6 @@ jobs:
           resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
           parameters: sqlServerPassword=${{ secrets.SQL_PASSWORD }}
           template: ./deploy/europe.bicep
+          deploymentName: europe-run-${{ github.run_id }}
           deploymentMode: Complete
           failOnStdErr: false
