Switch to run number
Signed-off-by: Tom Kerkhove <kerkhove.tom@gmail.com>

--- a/.github/workflows/deploy-to-azure.yml
+++ b/.github/workflows/deploy-to-azure.yml
@@ -32,7 +32,7 @@ jobs:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
           resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
           template: ./deploy/us.bicep
-          deploymentName: us-run-${{ github.run_id }}
+          deploymentName: us-run-${{ github.run_number }}
           deploymentMode: Complete
           failOnStdErr: false
 
@@ -60,6 +60,6 @@ jobs:
           resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
           parameters: sqlServerPassword=${{ secrets.SQL_PASSWORD }}
           template: ./deploy/europe.bicep
-          deploymentName: europe-run-${{ github.run_id }}
+          deploymentName: europe-run-${{ github.run_number }}
           deploymentMode: Complete
           failOnStdErr: false
