--- a/.github/workflows/deploy-to-azure.yml
+++ b/.github/workflows/deploy-to-azure.yml
@@ -32,6 +32,7 @@ jobs:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
           resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
           template: ./deploy/us.bicep
+          deploymentName: us-run-${{ github.run_number }}
           deploymentMode: Complete
           failOnStdErr: false
 
@@ -57,7 +58,8 @@ jobs:
         with:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
           resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
-          parameters: sqlServerPassword=${{ env.SQL_PASSWORD }}
+          parameters: sqlServerPassword=${{ secrets.SQL_PASSWORD }}
           template: ./deploy/europe.bicep
+          deploymentName: europe-run-${{ github.run_number }}
           deploymentMode: Complete
           failOnStdErr: false
