--- a/.github/workflows/deploy-to-azure.yml
+++ b/.github/workflows/deploy-to-azure.yml
@@ -19,14 +19,16 @@ jobs:
       steps:
         # Checkout code
       - uses: actions/checkout@main
+        name: Checkout code
 
           # Login to Azure
       - uses: azure/login@v1
+        name: Login to Azure
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
         # Deploy Bicep file
-      - name: deploy
+      - name: Deploy to Azure
         uses: azure/arm-deploy@v1
         with:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
@@ -46,14 +48,16 @@ jobs:
       steps:
         # Checkout code
       - uses: actions/checkout@main
+        name: Checkout code
 
           # Login to Azure
       - uses: azure/login@v1
+        name: Login to Azure
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
         # Deploy Bicep file
-      - name: deploy
+      - name: Deploy to Azure
         uses: azure/arm-deploy@v1
         with:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
