feat: Provide large scale amount of workflows
Signed-off-by: Tom Kerkhove <kerkhove.tom@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,4 +33,16 @@ jobs:
       uses: Azure/bicep-build-action@v1.0.0
       with:
         bicepFilePath: ./deploy/europe.bicep
+  scale:
+    name: Large Scale
+    runs-on: ubuntu-latest
+    steps:
+      # Checkout code
+    - uses: actions/checkout@main
+
+      # Lint Bicep file
+    - name: Bicep Build
+      uses: Azure/bicep-build-action@v1.0.0
+      with:
+        bicepFilePath: ./deploy/large-scale.bicep
         
