--- a/.github/workflows/deploy-to-azure.yml
+++ b/.github/workflows/deploy-to-azure.yml
@@ -67,3 +67,32 @@ jobs:
           deploymentName: europe-run-${{ github.run_number }}
           deploymentMode: Complete
           failOnStdErr: false
+
+  deploy_large_scale:
+      name: Deploy to Large Scale
+      env:
+        AZURE_RESOURCEGROUP_NAME: "promitor-testing-infrastructure-large-scale"
+      environment:
+        name: Promitor Large Scale
+      runs-on: ubuntu-latest
+      steps:
+        # Checkout code
+      - uses: actions/checkout@main
+        name: Checkout code
+
+          # Login to Azure
+      - uses: azure/login@v1
+        name: Login to Azure
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+        # Deploy Bicep file
+      - name: Deploy to Azure
+        uses: azure/arm-deploy@v1
+        with:
+          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
+          resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
+          template: ./deploy/large-scale.bicep
+          deploymentName: large-scale-run-${{ github.run_number }}
+          deploymentMode: Complete
+          failOnStdErr: false
