fix: Partition large scale resources across multiple templates for ARM limit
Signed-off-by: Tom Kerkhove <kerkhove.tom@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,5 +44,17 @@ jobs:
     - name: Bicep Build
       uses: Azure/bicep-build-action@v1.0.0
       with:
-        bicepFilePath: ./deploy/large-scale.bicep
+        bicepFilePath: ./deploy/large-scale/large-scale-americas.bicep
+
+      # Lint Bicep file
+    - name: Bicep Build
+      uses: Azure/bicep-build-action@v1.0.0
+      with:
+        bicepFilePath: ./deploy/large-scale/large-scale-apac.bicep
+
+      # Lint Bicep file
+    - name: Bicep Build
+      uses: Azure/bicep-build-action@v1.0.0
+      with:
+        bicepFilePath: ./deploy/large-scale/large-scale-europe.bicep
         
