--- a/.github/workflows/deploy-to-azure.yml
+++ b/.github/workflows/deploy-to-azure.yml
@@ -86,13 +86,35 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-        # Deploy Bicep file
+        # Deploy Bicep file for Americas
       - name: Deploy to Azure
         uses: azure/arm-deploy@v1
         with:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
           resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
-          template: ./deploy/large-scale.bicep
-          deploymentName: large-scale-run-${{ github.run_number }}
+          template: ./deploy/large-scale/large-scale-americas.bicep
+          deploymentName: large-scale-americas-run-${{ github.run_number }}
+          deploymentMode: Complete
+          failOnStdErr: false
+
+        # Deploy Bicep file for APAC
+      - name: Deploy to Azure
+        uses: azure/arm-deploy@v1
+        with:
+          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
+          resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
+          template: ./deploy/large-scale/large-scale-apac.bicep
+          deploymentName: large-scale-apac-run-${{ github.run_number }}
+          deploymentMode: Complete
+          failOnStdErr: false
+
+        # Deploy Bicep file for Europe
+      - name: Deploy to Azure
+        uses: azure/arm-deploy@v1
+        with:
+          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
+          resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
+          template: ./deploy/large-scale/large-scale-europe.bicep
+          deploymentName: large-scale-europe-run-${{ github.run_number }}
           deploymentMode: Complete
           failOnStdErr: false
