chore: Update deployment step names
Signed-off-by: Tom Kerkhove <kerkhove.tom@gmail.com>

--- a/.github/workflows/deploy-to-azure.yml
+++ b/.github/workflows/deploy-to-azure.yml
@@ -87,7 +87,7 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
         # Deploy Bicep file for Americas
-      - name: Deploy to Azure
+      - name: Deploy to Azure (Americas)
         uses: azure/arm-deploy@v1
         with:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
@@ -98,7 +98,7 @@ jobs:
           failOnStdErr: false
 
         # Deploy Bicep file for APAC
-      - name: Deploy to Azure
+      - name: Deploy to Azure (APAC)
         uses: azure/arm-deploy@v1
         with:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
@@ -109,7 +109,7 @@ jobs:
           failOnStdErr: false
 
         # Deploy Bicep file for Europe
-      - name: Deploy to Azure
+      - name: Deploy to Azure (Europe)
         uses: azure/arm-deploy@v1
         with:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
