--- a/.github/workflows/deploy-resources-at-scale-to-azure.yml
+++ b/.github/workflows/deploy-resources-at-scale-to-azure.yml
@@ -1,79 +1,21 @@
-name: Deploy to Azure
+name: Deploy Resources-at-Scale to Azure
 on:
   workflow_dispatch:
   push:
     branches:
       - main
     paths:
-    - 'deploy/**'
-    - '.github/workflows/deploy-to-azure.yml'
+    - 'deploy/large-scale/**'
+    - '.github/workflows/deploy-resources-at-scale-to-azure'
 
 jobs:
-  deploy_to_us:
-      name: Deploy to US
-      env:
-        AZURE_RESOURCEGROUP_NAME: "promitor-testing-infrastructure-us"
-      environment:
-        name: Promitor US
-      runs-on: ubuntu-latest
-      steps:
-        # Checkout code
-      - uses: actions/checkout@main
-        name: Checkout code
 
-          # Login to Azure
-      - uses: azure/login@v1
-        name: Login to Azure
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-        # Deploy Bicep file
-      - name: Deploy to Azure
-        uses: azure/arm-deploy@v1
-        with:
-          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
-          resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
-          template: ./deploy/us.bicep
-          deploymentName: us-run-${{ github.run_number }}
-          deploymentMode: Complete
-          failOnStdErr: false
-
-  deploy_to_europe:
-      name: Deploy to Europe
-      env:
-        AZURE_RESOURCEGROUP_NAME: "promitor-testing-infrastructure-europe"
-      environment:
-        name: Promitor Europe
-      runs-on: ubuntu-latest
-      steps:
-        # Checkout code
-      - uses: actions/checkout@main
-        name: Checkout code
-
-          # Login to Azure
-      - uses: azure/login@v1
-        name: Login to Azure
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-        # Deploy Bicep file
-      - name: Deploy to Azure
-        uses: azure/arm-deploy@v1
-        with:
-          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
-          resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
-          parameters: sqlServerPassword=${{ secrets.SQL_PASSWORD }}
-          template: ./deploy/europe.bicep
-          deploymentName: europe-run-${{ github.run_number }}
-          deploymentMode: Complete
-          failOnStdErr: false
-
-  deploy_large_scale:
-      name: Deploy to Large Scale
+  deploy_to_americas:
+      name: Deploy to Americas
       env:
         AZURE_RESOURCEGROUP_NAME: "promitor-testing-infrastructure-large-scale"
       environment:
-        name: Promitor Large Scale
+        name: Promitor Large Scale (Americas)
       runs-on: ubuntu-latest
       steps:
         # Checkout code
@@ -97,6 +39,24 @@ jobs:
           deploymentMode: Complete
           failOnStdErr: false
 
+  deploy_to_apac:
+      name: Deploy to APAC
+      env:
+        AZURE_RESOURCEGROUP_NAME: "promitor-testing-infrastructure-large-scale"
+      environment:
+        name: Promitor Large Scale (APAC)
+      runs-on: ubuntu-latest
+      steps:
+        # Checkout code
+      - uses: actions/checkout@main
+        name: Checkout code
+
+          # Login to Azure
+      - uses: azure/login@v1
+        name: Login to Azure
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
         # Deploy Bicep file for APAC
       - name: Deploy to Azure (APAC)
         uses: azure/arm-deploy@v1
@@ -107,6 +67,24 @@ jobs:
           deploymentName: large-scale-apac-run-${{ github.run_number }}
           deploymentMode: Complete
           failOnStdErr: false
+
+  deploy_to_europe:
+      name: Deploy to Europe
+      env:
+        AZURE_RESOURCEGROUP_NAME: "promitor-testing-infrastructure-large-scale"
+      environment:
+        name: Promitor Large Scale (Europe)
+      runs-on: ubuntu-latest
+      steps:
+        # Checkout code
+      - uses: actions/checkout@main
+        name: Checkout code
+
+          # Login to Azure
+      - uses: azure/login@v1
+        name: Login to Azure
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
         # Deploy Bicep file for Europe
       - name: Deploy to Azure (Europe)
