--- a/.github/workflows/deploy-test-resources-to-azure.yml
+++ b/.github/workflows/deploy-test-resources-to-azure.yml
@@ -35,6 +35,7 @@ jobs:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
           resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
           template: ./deploy/us.bicep
+          parameters: mariaDbServerPassword=${{ secrets.AZURE_MARIADB_SERVER_PASSWORD }}
           deploymentName: us-run-${{ github.run_number }}
           deploymentMode: Complete
           failOnStdErr: false
@@ -63,8 +64,8 @@ jobs:
         with:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
           resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
-          parameters: sqlServerPassword=${{ secrets.SQL_PASSWORD }}
           template: ./deploy/europe.bicep
+          parameters: sqlServerPassword=${{ secrets.SQL_PASSWORD }}
           deploymentName: europe-run-${{ github.run_number }}
           deploymentMode: Complete
           failOnStdErr: false
