--- a/.github/workflows/deploy-test-resources-to-azure.yml
+++ b/.github/workflows/deploy-test-resources-to-azure.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Deploy to Azure
         uses: azure/arm-deploy@v1
         with:
-          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
+          subscriptionId: ${{ vars.AZURE_SUBSCRIPTION }}
           resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
           template: ./deploy/us.bicep
           parameters: mariaDbServerPassword=${{ secrets.AZURE_MARIADB_SERVER_PASSWORD }}
@@ -62,7 +62,7 @@ jobs:
       - name: Deploy to Azure
         uses: azure/arm-deploy@v1
         with:
-          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
+          subscriptionId: ${{ vars.AZURE_SUBSCRIPTION }}
           resourceGroupName: ${{ env.AZURE_RESOURCEGROUP_NAME }}
           template: ./deploy/europe.bicep
           parameters: sqlServerPassword=${{ secrets.SQL_PASSWORD }}
