ci: Ignore hardcoded locations during Bicep linting

--- a/bicepconfig.json
+++ b/bicepconfig.json
@@ -5,6 +5,9 @@
       "rules": {
         "no-loc-expr-outside-params": {
           "level": "Off"
+        },
+        "no-hardcoded-location": {
+          "level": "Off"
         }
       }
     }
